// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. secondary two no pic and two - small 1`] = `
<div
  className="css-view-1dbjc4n"
>
  <div
    className="css-text-901oao"
  >
    secondary-1
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    secondary-2
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    support-1
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-text-901oao"
  >
    support-2
  </div>
</div>
`;

exports[`2. secondary two no pic and two - medium 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "20px",
      "marginRight": "20px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "15px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-2
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "15px",
          "marginTop": "10px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-2
      </div>
    </div>
  </div>
</div>
`;

exports[`3. secondary two no pic and two - wide 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "15px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-2
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "15px",
          "marginTop": "10px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-2
      </div>
    </div>
  </div>
</div>
`;

exports[`4. secondary two no pic and two - huge 1`] = `
<div
  className="css-view-1dbjc4n"
  style={
    Object {
      "WebkitBoxFlex": 1,
      "WebkitFlexBasis": "0%",
      "WebkitFlexGrow": 1,
      "WebkitFlexShrink": 1,
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
      "marginLeft": "10px",
      "marginRight": "10px",
      "msFlexNegative": 1,
      "msFlexPositive": 1,
      "msFlexPreferredSize": "0%",
    }
  }
>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "10px",
          "marginTop": "15px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        secondary-2
      </div>
    </div>
  </div>
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "borderBottomColor": "rgba(219,219,219,1.00)",
        "borderBottomStyle": "solid",
        "borderBottomWidth": "1px",
        "borderLeftColor": "rgba(219,219,219,1.00)",
        "borderLeftStyle": "solid",
        "borderRightColor": "rgba(219,219,219,1.00)",
        "borderRightStyle": "solid",
        "borderTopColor": "rgba(219,219,219,1.00)",
        "borderTopStyle": "solid",
        "marginLeft": "10px",
        "marginRight": "10px",
      }
    }
  />
  <div
    className="css-view-1dbjc4n"
    style={
      Object {
        "WebkitBoxDirection": "normal",
        "WebkitBoxFlex": 1,
        "WebkitBoxOrient": "horizontal",
        "WebkitFlexBasis": "0%",
        "WebkitFlexDirection": "row",
        "WebkitFlexGrow": 1,
        "WebkitFlexShrink": 1,
        "flexBasis": "0%",
        "flexDirection": "row",
        "flexGrow": 1,
        "flexShrink": 1,
        "msFlexDirection": "row",
        "msFlexNegative": 1,
        "msFlexPositive": 1,
        "msFlexPreferredSize": "0%",
      }
    }
  >
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-1
      </div>
    </div>
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "borderBottomColor": "rgba(219,219,219,1.00)",
          "borderBottomStyle": "solid",
          "borderLeftColor": "rgba(219,219,219,1.00)",
          "borderLeftStyle": "solid",
          "borderRightColor": "rgba(219,219,219,1.00)",
          "borderRightStyle": "solid",
          "borderRightWidth": "1px",
          "borderTopColor": "rgba(219,219,219,1.00)",
          "borderTopStyle": "solid",
          "marginBottom": "15px",
          "marginTop": "10px",
        }
      }
    />
    <div
      className="css-view-1dbjc4n"
      style={
        Object {
          "WebkitBoxFlex": 1,
          "WebkitFlexBasis": "0%",
          "WebkitFlexGrow": 1,
          "WebkitFlexShrink": 1,
          "flexBasis": "0%",
          "flexGrow": 1,
          "flexShrink": 1,
          "msFlexNegative": 1,
          "msFlexPositive": 1,
          "msFlexPreferredSize": "0%",
        }
      }
    >
      <div
        className="css-text-901oao"
      >
        support-2
      </div>
    </div>
  </div>
</div>
`;
